# haskell-ffp

./: README.md  haskell-from-first.cabal  stack.yaml
src/Chapters/Ch02/: broken.hs  practice.hs
src/Chapters/Ch03/: exercises.hs  print2.hs  print3broken.hs
src/Chapters/Ch04/: change.hs  exercises.hs  greetIfCool2.hs
src/Chapters/Ch06/: ExercisesEq.hs
src/Chapters/Ch07/: Arith4.hs  CaseExample.hs  CasePractice.hs  Exercises.hs
src/Chapters/Ch08/: WordNumber.hs
src/Chapters/Ch09/: Cipher.hs  Exercises.hs  Filtering.hs  MoreBottoms.hs  MyEnum.hs  PoemLines.hs
src/Chapters/Ch10/: DefinitionsFold.hs
src/Chapters/Ch11/: As.hs  Trees.hs  VigCipher.hs
src/Chapters/Ch12/: AnaTrees.hs  Anamorphism.hs  SmallMaybe.hs
src/Chapters/Ch13/: hello.cabal  stack.yaml
src/Chapters/Ch13-hangman/: CHANGELOG.md  ch13-hangman.cabal
src/Chapters/Ch13-hangman/src/: Main.hs
src/Chapters/Ch13/exe/: Main.hs  MainCiph.hs
src/Chapters/Ch13/src/: DogsRule.hs  Hello.hs  Palindrome.hs  VigCipher.hs
src/Chapters/Ch13/test/: Test.hs
src/Chapters/Ch14/: stack.yaml
src/Chapters/Ch14-morse/: README.md  ch14-morse.cabal  package.yaml
src/Chapters/Ch14-morse/app/: Main.hs
src/Chapters/Ch14-morse/src/: Morse.hs
src/Chapters/Ch14-morse/test/: Tests.hs
src/Chapters/Ch14/src/: Addition.hs  WordNumber.hs
src/Chapters/Ch14/test/: WordNumberTest.hs
src/Chapters/Ch15/: OptMonoid.hs  Scratch.hs
src/Chapters/Ch16/: Eitherish.hs  Scratch.hs
src/Chapters/Ch17/: BadMonoid.hs  ChapterExercises.hs  Examples.hs  ExerciseVowels.hs  Instances.hs  ListAp.hs  MyZipList.hs  Scratch.hs
src/Chapters/Ch18/: BadMonad.hs  EitherMon.hs  Exercises.hs  MonComp.hs
src/Chapters/Ch20/: Exercises.hs  Scratch.hs
src/Chapters/Ch21/: Exercises.hs
src/Chapters/Ch22/: MyReader.hs  ReaderInstances.hs  ReaderPractice.hs
src/Chapters/Ch23/: Example.hs  Exercises.hs  FizzBuzzState.hs  FizzBuzzState2.hs  RandomExample.hs  RandomExample2.hs  Scratch.hs  ScratchInstance.hs
src/Chapters/Ch24/: AltParsing.hs  BT.hs  ConfigFilesParser.hs  Exercises.hs  LearnParsers.hs  LogParser.hs  Marshalling.hs  Semver.hs  TextFractions.hs  TextFractions2.hs  Utils.hs
src/Chapters/Ch25/: Bifunct.hs  ExampleIdentity.hs  IdentityScratch.hs
src/Chapters/Ch26/: Exercises.hs  FixMe.hs  LiftEitherT.hs  MaybeScratch.hs  MorraScratch.hs  OutterInner.hs  ReaderScratch.hs  Scotty.hs  Scotty2.hs  ScottyExercise.hs  StateScratch.hs  WrapItUp.hs
src/Chapters/Ch27/: Bang.hs  StrictList.hs
src/Chapters/Ch31-Project/fingerd/: fingerd.cabal
src/Chapters/Ch31-Project/fingerd/src/: Add.hs  Complete.hs  Debug.hs  Main.hs  Scratch.hs
src/chapters/ch02/: learn.hs  test.hs  triples.hs
src/chapters/ch03/: print3flipped.hs  scratch.hs
src/chapters/ch05/: determinaTheType.hs  typeInference1.hs
src/chapters/ch06/: Exercises.hs
src/chapters/ch07/: Arith2.hs  ArtfulExercise.hs  GrabBag.hs  GuardsExercise.hs  VarietyPack.hs
src/chapters/ch08/: Exercises.hs
src/chapters/ch09/: Cipher.hs  MyDefinitions.hs  PoemLines.hs  SquareCube.hs  Zipping.hs
src/chapters/ch10/: DB.hs  DefinitionsFold.hs  Exercises.hs  Scans.hs
src/chapters/ch11/: Cardinality.hs  Dogs.hs  Hutton.hs  Language.hs  Phone.hs  Programmers.hs  Trees.hs  VigCipher.hs
src/chapters/ch12/: SmallEither.hs  StringProcessing.hs
src/chapters/ch13/: .gitignore  hello.cabal
src/chapters/ch13-hangman/: README.md
src/chapters/ch13-hangman/src/: Main.hs
src/chapters/ch13/exe/: Main.hs
src/chapters/ch13/src/: DogsRule.hs  Hello.hs  Person.hs  Scratch.hs
src/chapters/ch14/: addition.cabal
src/chapters/ch14-morse/: CHANGELOG.md  ch14-morse.cabal  package.yaml
src/chapters/ch14-morse/src/: Morse.hs
src/chapters/ch14-morse/test/: Tests.hs
src/chapters/ch14/src/: Addition.hs
src/chapters/ch14/test/: Misc.hs  WordNumberTest.hs
src/chapters/ch15/: Exercises.hs  MadLib.hs  OptMonoid.hs  Scratch.hs
src/chapters/ch16/: Exercises.hs  Laws.hs  ReplaceExperiment.hs  Scratch.hs
src/chapters/ch17/: FixerUpper.hs  Instances.hs  Laws.hs  Lookups.hs  MyValidation.hs  Scratch.hs
src/chapters/ch18/: EitherMon.hs  Exercises.hs  Scratch.hs
src/chapters/ch20/: LibraryFunctions.hs  Scratch.hs  SkiFree.hs
src/chapters/ch21/: Exercises.hs  SkiFree.hs  TreeInstance.hs
src/chapters/ch22/: PAChar.hs  PartiallyApplied.hs  ReaderInstances.hs  ReaderPractice.hs
src/chapters/ch23/: Example.hs
