name:                haskell-from-first
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-from-first#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


-- https://stackoverflow.com/questions/29808641/importing-files-from-different-folders-with-haskell-source-code
executable haskell-from-first
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       time,
                       QuickCheck,
                       checkers,
                       mtl,
                       random,
                       transformers,
                       dlist,
                       trifecta,
                       containers,
                       text,
                       bytestring,
                       hspec,
                       parsers,
                       raw-strings-qq,
                       attoparsec,
                       parsec,
                       aeson,
                       scientific
