name:                ch13-hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch13-hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Edu
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md
                     data/dict.txt

executable ch13-hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , random
                       , split
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
