name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:     Addition
                       , WordNumber
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                       , hspec
                       , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable addition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , hspec
                      , QuickCheck
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite word-number
  type: exitcode-stdio-1.0
  main-is: WordNumberTest.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -main-is WordNumberTest.main
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , hspec
    , addition
  default-language: Haskell2010

test-suite misc
  type: exitcode-stdio-1.0
  main-is: Misc.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -main-is Misc.main
  build-depends:
      QuickCheck
    , base >=4.7 && <5
  default-language: Haskell2010
