cabal-version:       2.2

name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fingerd#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable debug
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Debug.hs
  default-language:  Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  bytestring
                    ,  network
                    ,  raw-strings-qq
                    ,  sqlite-simple
                    ,  text

